# hpc-submit

./: .gitignore  README.md  pyproject.toml
hpc_submit/: cli.py  config.py  submit.py
